hphp/hack/test/typecheck/like_types/dynamic_coercion/reified_generics.php
<?hh

class C<reify T> {}

function c_int(): C<int> {
  return new C<~int>();
}

function vector_c_int(): Vector<C<int>> {
  return Vector<C<~int>> {};
}
